--- a/react-project/package.json
+++ b/react-project/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.8.6",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.1",
+    "carousel": "^0.0.3",
     "lucide-react": "^0.274.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
